--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,10 @@
             <version>8.0.5</version>
             <type>pom</type>
         </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
